# chameleon

./: .gitignore  Bender.yml  LICENSE  LICENSE-HW  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
chameleon/core/: chameleon_interface.py  learning_utils.py  net_load_utils.py  net_transfer_utils.py  quant_conversions.py  shared_utils.py
chameleon/fpga_bridge/: __init__.py  chameleon_fpga_bridge.py  current_utils.py
chameleon/sim/: chameleon_sim_controller.py
nets/: 11c_kws_mfcc_2v9y2ba2_step=4832.qsd.pkl  12c_kws_mfcc_0usnfejd_step=5512_acc=93.31.qsd.pkl  12c_kws_raw_audio_4swylpi6_step=6312_acc=84.00.qsd.pkl  mnist_14k4_tcn_98.77.qsd.pkl  mnist_784_96_10_acc=94.57.qsd.pkl  mnist_tcn_785_acc=99.29.qsd.pkl  mnist_tcn_acc=98.75.qsd.pkl  omniglot_tcn_20_way_1_shot_acc=92.06.qsd.pkl  omniglot_tcn_20_way_1_shot_acc=93.51.qsd.pkl  omniglot_tcn_5_way_5_shot_acc=99.29.qsd.pkl
scripts/waveviewers/: gtkwave_main.gtkw  gtkwave_struct.gtkw  (+1 more)
src/: activation_memory_wrapper.v  argmax_tree.v  bias_memory_wrapper.v  chameleon.sv  config_memory.json  convert_2d_to_1d_array_size.v  few_shot_learning_control.v  flog2.v  fsm.v  global_sram_power_down_controller.v  input_memory.v  managed_activation_memory.v  managed_bias_memory.v  managed_input_memory.v  managed_weight_memory.v  pe.v  pe_array.sv  pe_array_control.sv  pointers.json  serial_parallel_argmax.v  squared_log2_sum_accumulator.v  states.vh  take_lsbs_of_2d_array.v  weight_memory_wrapper.v  wide_flog2.v
test/: test_argmax_tree.py  test_chameleon.py  test_pe.py  test_pe_array.py  utils.py  wlf2vcd.sh
(+14 files in other folders)
